# GraphicsTesting

./: CMakeLists.txt  README.md
GraphicsTesting/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  ElementBuffer.h  GraphicsTesting.cpp  GraphicsTesting.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  Window.cpp  Window.h
GraphicsTesting/Engine/: Camera.cpp  Camera.h  Component.h  Engine.h  Object.h
GraphicsTesting/Renderer/: Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Renderer.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  Window.cpp  Window.h
Old/: Application.cpp  Camera.cpp  Camera.h  ElementBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexArray.h  Window.h
res/: default.frag  default.vert  light.frag  light.vert
res/Shaders/: default.vert  specular.frag  specular.vert
